Fix broken image links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div class="container" id="question-container">
-        <div class="gif-container"><img src="https://media1.tenor.com/m/hnFkP8a2s7oAAAAC/milk-and-mocha-bear.gif" alt="Cute Bear"></div>
+        <div class="gif-container"><img src="https://media.tenor.com/K2QKkyj2GckAAAAC/mocha-bear-hearts.gif" alt="Cute Bear"></div>
         <h1>Will you be my Valentine, Bubu?</h1>
         <div class="buttons">
             <button id="yesBtn" onclick="acceptLove()">Yes</button>
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div id="success-message">
-        <div class="gif-container"><img src="https://media1.tenor.com/m/gUiu1zyxfzYAAAAC/bear-kiss-bear-kisses.gif" alt="Happy Bear"></div>
+        <div class="gif-container"><img src="https://media.tenor.com/gUiu1zyxfzYAAAAC/bear-kiss-bear-kisses.gif" alt="Happy Bear"></div>
         <h1>Yayyy! I knew it! ❤️</h1>
     </div>
     <script>
