--- a/index.html
+++ b/index.html
@@ -11,50 +11,112 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #fce4ec;
             margin: 0;
             overflow: hidden;
             flex-direction: column;
             text-align: center;
+            
+            /* BACKGROUND SETTINGS */
+            background-image: url('background.gif');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
-        h1 { color: #d81b60; font-size: 2.5rem; margin-bottom: 20px; }
-        .gif-container img { width: 200px; border-radius: 10px; margin-bottom: 20px; }
-        .buttons { display: flex; gap: 20px; justify-content: center; align-items: center; flex-wrap: wrap; }
-        button { padding: 15px 30px; font-size: 1.2rem; border: none; border-radius: 50px; cursor: pointer; transition: all 0.3s ease; font-weight: bold; }
-        #yesBtn { background-color: #4caf50; color: white; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-        #noBtn { background-color: #f44336; color: white; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-        #success-message { display: none; flex-direction: column; align-items: center; }
+
+        /* This creates a semi-transparent white box so text is readable */
+        .container {
+            background-color: rgba(255, 255, 255, 0.85);
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+            max-width: 90%;
+        }
+
+        h1 {
+            color: #d81b60;
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+            text-shadow: 1px 1px 2px rgba(255,255,255,0.8);
+        }
+
+        .gif-container img {
+            width: 200px;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+
+        .buttons {
+            display: flex;
+            gap: 20px;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+
+        button {
+            padding: 15px 30px;
+            font-size: 1.2rem;
+            border: none;
+            border-radius: 50px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-weight: bold;
+        }
+
+        #yesBtn { background-color: #4caf50; color: white; box-shadow: 0 4px 6px rgba(0,0,0,0.2); }
+        #noBtn { background-color: #f44336; color: white; box-shadow: 0 4px 6px rgba(0,0,0,0.2); }
+
+        #success-message {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 40px;
+            border-radius: 20px;
+        }
         #success-message h1 { font-size: 3rem; color: #d81b60; }
     </style>
 </head>
 <body>
     <div class="container" id="question-container">
-        <div class="gif-container"><img src="https://media.tenor.com/K2QKkyj2GckAAAAC/mocha-bear-hearts.gif" alt="Cute Bear"></div>
+        <div class="gif-container">
+            <img src="https://media.tenor.com/K2QKkyj2GckAAAAC/mocha-bear-hearts.gif" alt="Cute Bear">
+        </div>
         <h1>Will you be my Valentine, Bubu?</h1>
         <div class="buttons">
             <button id="yesBtn" onclick="acceptLove()">Yes</button>
             <button id="noBtn" onclick="rejectLove()">No</button>
         </div>
     </div>
+
     <div id="success-message">
-        <div class="gif-container"><img src="https://media.tenor.com/gUiu1zyxfzYAAAAC/bear-kiss-bear-kisses.gif" alt="Happy Bear"></div>
+        <div class="gif-container">
+            <img src="https://media.tenor.com/gUiu1zyxfzYAAAAC/bear-kiss-bear-kisses.gif" alt="Happy Bear">
+        </div>
         <h1>Yayyy! I knew it! ❤️</h1>
     </div>
+
     <script>
         let noClickCount = 0;
         const noBtn = document.getElementById('noBtn');
         const yesBtn = document.getElementById('yesBtn');
         const noTexts = ["Are you sure?", "Really sure?", "Bubu please?", "Don't do this!", "I'm gonna cry...", "Heartbroken...", "Just click Yes!"];
+
         function rejectLove() {
             noClickCount++;
             yesBtn.style.fontSize = `${parseFloat(window.getComputedStyle(yesBtn).fontSize) + 20}px`;
-            if (noClickCount < noTexts.length) { noBtn.innerText = noTexts[noClickCount]; } 
-            else { noBtn.style.display = 'none'; }
+            if (noClickCount < noTexts.length) { 
+                noBtn.innerText = noTexts[noClickCount]; 
+            } else { 
+                noBtn.style.display = 'none'; 
+            }
         }
+
         function acceptLove() {
             document.getElementById('question-container').style.display = 'none';
             document.getElementById('success-message').style.display = 'flex';
-            document.body.style.backgroundColor = "#ffcdd2";
+            // We don't change background color anymore so we can see the photo!
         }
     </script>
 </body>
